src/objects/PagesApi__Form_Response__c.object
<CustomObject>
    <description>Object used to capture form submission attributes that parents Field Responses.</description>
    <fields>
        <fullName>EventApi__Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Link between the Form Response and the Attendee.</description>
        <inlineHelpText>** System Calculated ** Link between the Form Response and the Attendee.</inlineHelpText>
        <label>Attendee</label>
        <referenceTo>EventApi__Attendee__c</referenceTo>
        <relationshipLabel>Registration Form</relationshipLabel>
        <relationshipName>Form_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Registration_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Link between the Form Response and the Registration Item.</description>
        <inlineHelpText>** System Calculated ** Link between the Form Response and the Registration Item.</inlineHelpText>
        <label>Registration Item</label>
        <referenceTo>EventApi__Registration_Item__c</referenceTo>
        <relationshipLabel>Registration Form</relationshipLabel>
        <relationshipName>Form_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Speaker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Link between the Form Response and the Speaker.</description>
        <inlineHelpText>** System Calculated ** Link between the Form Response and the Speaker.</inlineHelpText>
        <label>Speaker</label>
        <referenceTo>EventApi__Speaker__c</referenceTo>
        <relationshipLabel>Speaker Agreement</relationshipLabel>
        <relationshipName>Form_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Link between the Form Response and the Sponsor.</description>
        <inlineHelpText>** System Calculated ** Link between the Form Response and the Sponsor.</inlineHelpText>
        <label>Sponsor</label>
        <referenceTo>EventApi__Sponsor__c</referenceTo>
        <relationshipLabel>Sponsor Agreement</relationshipLabel>
        <relationshipName>Form_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Link to related Account.</description>
        <inlineHelpText>Link to related Account.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Form Responses (Account)</relationshipLabel>
        <relationshipName>Form_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related Assignment.</description>
        <inlineHelpText>Link to related Assignment.</inlineHelpText>
        <label>Assignment</label>
        <referenceTo>OrderApi__Assignment__c</referenceTo>
        <relationshipLabel>Form Responses</relationshipLabel>
        <relationshipName>Form_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Link to related Contact.</description>
        <inlineHelpText>Link to related Contact.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Form Responses (Contact)</relationshipLabel>
        <relationshipName>Form_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related Item.</description>
        <inlineHelpText>Link to related Item.</inlineHelpText>
        <label>Item</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipLabel>Form Responses</relationshipLabel>
        <relationshipName>Form_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related Sales Order Line.</description>
        <inlineHelpText>Link to related Sales Order Line.</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Form Responses</relationshipLabel>
        <relationshipName>Form_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related Sales Order.</description>
        <inlineHelpText>Link to related Sales Order.</inlineHelpText>
        <label>Sales Order</label>
        <referenceTo>OrderApi__Sales_Order__c</referenceTo>
        <relationshipLabel>Form Responses</relationshipLabel>
        <relationshipName>Form_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PagesApi__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the account or the contact&apos;s related account.</description>
        <inlineHelpText>Identifies the account or the contact&apos;s related account.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Form Responses</relationshipLabel>
        <relationshipName>Form_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PagesApi__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the related contact to the form submission.</description>
        <inlineHelpText>Identifies the related contact to the form submission.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Form Responses</relationshipLabel>
        <relationshipName>Form_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PagesApi__Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>** System Calculated ** Identifies the date the form was submitted.</description>
        <inlineHelpText>** System Calculated **  Identifies the date the form was submitted.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PagesApi__Entity__c</fullName>
        <description>Identifies the &quot;Customer&quot; of the record.</description>
        <inlineHelpText>Identifies the &quot;Customer&quot; of the record.</inlineHelpText>
        <label>Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PagesApi__Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Required ** Identifies the response&apos;s related form.</description>
        <inlineHelpText>** Required ** Identifies the response&apos;s related form.</inlineHelpText>
        <label>Form</label>
        <referenceTo>PagesApi__Form__c</referenceTo>
        <relationshipLabel>Form Responses</relationshipLabel>
        <relationshipName>Form_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PagesApi__Responder_Link__c</fullName>
        <description>** System Calculated ** Link to the responder record (Account, Contact, or User).</description>
        <formula>IF ( ISPICKVAL(PagesApi__Entity__c,&apos;Contact&apos;),
HYPERLINK(&quot;/&quot; + PagesApi__Contact__c, PagesApi__Contact__r.FirstName + &quot; &quot; +  PagesApi__Contact__r.LastName, &quot;_tab&quot;) ,
IF (ISPICKVAL(PagesApi__Entity__c,&apos;Account&apos;),
HYPERLINK(&quot;/&quot; + PagesApi__Account__c, PagesApi__Account__r.Name, &quot;_tab&quot;) ,
IF (ISPICKVAL(PagesApi__Entity__c,&apos;User&apos;),
HYPERLINK(&quot;/&quot; + PagesApi__User__c, PagesApi__User__r.FirstName + &quot; &quot; +  PagesApi__User__r.LastName, &quot;_tab&quot;) , &quot;&quot;)))</formula>
        <inlineHelpText>** System Calculated ** Link to the responder record (Account, Contact, or User).</inlineHelpText>
        <label>Responder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Link to the User that responded to the Form.</description>
        <inlineHelpText>** System Calculated ** Link to the User that responded to the Form.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Form_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Form Response</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Response ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>